# nan-talk

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Justfile  README.md  nan-talk.key  pyproject.toml  startup.py  starwars.txt
.github/workflows/: lint.yml  publish.yml  test.yml  zizmor.yml
src/nancipher/: __init__.py  nancipher.py
src/nandict/: __init__.py  nancounter.py  nandictionary.py
src/nandict/nancipher/: __init__.py  nancipher.py
tests/: conftest.py  test_nancipher.py  test_nancounter.py  test_nandict.py
