[project]
name = "nandict"
version = "0.1.0"
description = "A dictionary and counter package that only allows a single NaN instance key"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "prek>=0.3.11",
    "pytest==9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
# Allow lines to be as long as 120 characters.
line-length = 120
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # imports
]


lint.ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

exclude = [
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"